[tool.poetry]
name = "ebpffun"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.13.0"
pyinfra = "^1.14.14"
pulumi-aws = "^4.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
